--- a/Angular-Form-Builder/src/app/form-builder/form-builder.component.scss
+++ b/Angular-Form-Builder/src/app/form-builder/form-builder.component.scss
@@ -1,11 +1,50 @@
 .section-border {
   border: solid blue;
-  margin-bottom: 10px;
   padding: 10px;
 }
 
 .section-droppable {
-  padding: 50px;
-  margin-top: 20px;
-  background: yellow;
+  border: 2px solid white;
+  padding: 40px;
+}
+
+.center-section {
+  height: 100vh;
+  overflow-y: auto;
+}
+
+h4 {
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 20px !important;
+  line-height: 28px !important;
+  letter-spacing: 0.25px !important;
+}
+
+.panel-widths {
+  width: 260px;
+}
+
+.draggable-item-type {
+  width: 200px;
+  background: #ffffff;
+  border: 1px solid #D5DBE0;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 6px;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.icon-style {
+  color: #697D91;
+  margin-right: .5rem;
+}
+
+.text-font {
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  letter-spacing: 0.4px !important;
 }
