--- a/Angular-Form-Builder/src/app/form-builder/section/section.component.scss
+++ b/Angular-Form-Builder/src/app/form-builder/section/section.component.scss
@@ -4,30 +4,29 @@
 }
 
 .above-droppable {
-  padding: 20px;
-  width: 90%;
-  background: blue;
+  width: 100%;
+  min-height: 25px;
+  margin-bottom: 2px;
+  border: 2px solid white;
 }
 
 .below-droppable {
-  padding: 20px;
-  width: 90%;
-  margin-top: 20px;
-  background: green;
+  width: 100%;
+  min-height: 25px;
+  margin-top: 2px;
+  border: 2px solid white;
 }
 
 .left-droppable {
-  float: left;
-  padding: 10px;
-  width: 8%;
-  background: orange;
+  width: 25px;
+  margin-right: 2px;
+  border: 2px solid white;
 }
 
 .right-droppable {
-  float: left;
-  padding: 10px;
-  width: 8%;
-  background: pink;
+  width: 25px;
+  margin-left: 2px;
+  border: 2px solid white;
 }
 
 .all-droppable {
@@ -38,20 +37,10 @@
 }
 
 .draggable-element {
-  float: left;
-  width: 73.5%;
   border: solid black;
 }
 
-.input-field {
-  width: 100%;
-  height: 100%;
-}
-
-table {
-  width: 100%;
-}
-
-button {
-  margin: 16px 8px;
+.td-style {
+  padding-right: 24px;
+  height: 0;
 }
