Prevent user from dropping section inside another section.

--- a/Angular-Form-Builder/src/app/form-builder/form-builder.component.html
+++ b/Angular-Form-Builder/src/app/form-builder/form-builder.component.html
@@ -48,6 +48,7 @@
         [section]="section"
         [typeOfDraggedElement]="draggedElementType"
         [itemChangedFromSettings]="selectedItemChanged"
+        [userDraggingSection]="userDraggingSection"
         [itemMovedFromOtherSection]="itemToAddToOtherSection"
         (dragBetweenSections)="setDataForDragBetweenSections($event)"
         (selectedItem)="onSelectedItemChange($event)"
