Adding a 'section settings' panel and re-organizing the item-settings code.

--- a/Angular-Form-Builder/src/app/form-builder/form-builder.component.html
+++ b/Angular-Form-Builder/src/app/form-builder/form-builder.component.html
@@ -43,6 +43,7 @@
         draggable="true"
         (dragstart)="onDragSection(i)"
         (dragend)="onDragSectionEnd()"
+        (click)="onSelectSection(i, $event)"
         (toggleDropZone)="toggleDropZone($event)"
         [showDropZones]="showItemDropZones | async"
         [section]="section"
@@ -67,9 +68,15 @@
     </div>
   </div>
 
-  <settings
+  <item-settings
     class="panel-widths"
     [item]="selectedItem"
     (updatedItem)="onUpdateSelectedItem($event)">
-  </settings>
+  </item-settings>
+
+  <section-settings
+    class="panel-widths"
+    [sectionSettings]="selectedSectionSettings"
+    (updatedSection)="onUpdateSelectedSection($event)">
+  </section-settings>
 </div>
