Added settings to each item that include whether or not that item is required.

--- a/Angular-Form-Builder/src/app/form-builder/settings-panel/item-settings/item-settings.component.html
+++ b/Angular-Form-Builder/src/app/form-builder/settings-panel/item-settings/item-settings.component.html
@@ -12,6 +12,16 @@
     </span>
   </div>
 
+  <div>
+    <span>Item Required: </span>
+    <span>
+      <input
+        type='checkbox'
+        [(ngModel)]='item.settings.required'
+        (ngModelChange)="updateItem()" />
+    </span>
+  </div>
+
   <div *ngIf="item.type === DraggedElementType.text || item.type === DraggedElementType.number">
     <span>Item Value: </span>
     <span>
