--- a/Angular-Form-Builder/src/app/form-builder/settings-panel/section-settings/section-settings.component.html
+++ b/Angular-Form-Builder/src/app/form-builder/settings-panel/section-settings/section-settings.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="sectionSettings">
-  <div>SECTION SETTINGS: </div>
+  <div>{{ config.heading }}</div>
+
   <div>
-    <span>Section Title: </span>
+    <span>{{ config.sectionTitleLabel }}</span>
     <span>
       <input
         type='text'
-        placeholder='Section Title'
+        [placeholder]='config.sectionTitlePlaceholder'
         [(ngModel)]='sectionSettings.title'
         (ngModelChange)="updateSectionSettings()" />
     </span>
